# WorldFork

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.autodev/: hooks.json
.autodev/agents/: code_reviewer.md  coder.md  planner.md
.github/workflows/: verify.yml
config/: cross_model.yaml  harness.yaml  llm_registry.yaml
core/eval/: filter_pipeline.py  runner.py  scoring.py  smoke.py  spec.py
core/harness/: auto_fix.py  coding_loop.py  hooks.py  prompt_loader.py  replan.py  task_context.py
core/llm/: cli_client.py  client.py  dynamic_token_limiter.py  game_token_policy.py  local_client.py
core/verify/: anti_pattern_check.py  cross_model.py  (+12 more)
docs/: AI_PLAYTESTER.md  CODEX_REVIEW_PATTERNS.md  D11_HARNESS_REDESIGN.md  DESIGN_disposition_engine.md  ENGINE_ARCHITECTURE.md  FINETUNE_STRATEGY.md  FLOOR1_COMPLETION_REVIEW.md  GAME_DESIGN.md  HARNESS_CORE.md  HARNESS_LAYER1_DEV.md  HARNESS_LAYER2_SERVICE.md  HARNESS_REALITY_CHECK_2026_05_03.md  INTEGRATED_RESEARCH_ANALYSIS.md  NARRATIVE_DESIGN.md  PHASE7_DIAGNOSIS.md  PHASE_C_LAUNCH_GUIDE.md  RETROSPECTIVE_TIER_0.md  ROADMAP.md  ROADMAP_V1.md  ROADMAP_V2_BARBARIAN.md  ROADMAP_V3.md  TIER_1_5_D1_5_REPORT.md  TIER_1_5_D1_REPORT.md  TIER_1_5_D2_REPORT.md  TIER_1_5_D3_REPORT.md  TIER_1_5_D4_REPORT.md  TIER_1_5_HARNESS_REBUILD_ROADMAP.md  TIER_1_5_RETROSPECTIVE.md  TIER_1_HONEST_DIAGNOSIS.md  TIER_1_LAUNCH_GUIDE.md  TIER_1_RETROSPECTIVE.md  TIER_1_W1_D1_REPORT.md  TIER_1_W1_D2_BASELINE.md  TIER_1_W1_D3_PLAYTESTER.md  TIER_1_W1_D4_REPORT.md  TIER_1_W1_D5_REPORT.md  TIER_1_W1_D6_REPORT.md  TIER_1_W2_D2_REPORT.md  TIER_1_W2_D3_REPORT.md  TIER_1_W2_D4_REPORT.md  (+21 more)
evals/: README.md
frontend/: next.config.ts  package-lock.json  package.json  vitest.config.ts
memory/: MEMORY.md  project_seed_converter_gap.md
personas/: README.md
research/: 00_README.md
runs/: README.md  tier_1_w1_d2_baseline.json
scenarios/: README.md
scripts/: auto_fix_runner.py  bench_mtp.py  bench_mtp_variants.sh  build_canon_index.py  build_episode_batches.py  crawl_dc.py  crawl_namuwiki.py  ensure_services.sh  extract_combat_rules.py  extract_essence_abilities.py  extract_mechanism_rules.py  extract_race_abilities.py  extract_source_monster.py  install_hooks.sh  normalize_character_role.py  playtest_monitor.sh  playtest_start.sh  prepare_canon_upload.py  run_hook.py  smoke_runner.py  tier_0_graduation_check.sh  verify.sh  verify_layer1_review.py
tests/: conftest.py
tools/: canon_audit_dedupe.py  canon_audit_extract.py  canon_audit_extract_dc.py  canon_audit_extract_episodes.py  canon_audit_merge.py  canon_audit_split_dc.py  canon_audit_split_episodes.py  canon_audit_split_wiki.py  canon_audit_wiki_filter.py  gen_pixel_tiles.py  measure_gm_prompt.py  play_30_turns_auto.py  play_w2_d5.py  play_w2_d5_analyze.py  review_auto_seeds.py  run_browser_e2e.py  run_e2e_check.py  run_real_gameplay_e2e.py  run_sim_real.py  run_sim_real_compare.py  run_sim_real_compare_models.py  run_sim_smoke.py  scenario_research.py  v3_disposition_demo.py
(+713 files in other folders)
